@@ -1,5 +1,9 @@
 package com.github.dactiv.framework.security.audit.elasticsearch;
 
+import co.elastic.clients.elasticsearch._types.query_dsl.Query;
+import co.elastic.clients.json.JsonData;
+import co.elastic.clients.util.ObjectBuilder;
+import com.fasterxml.jackson.core.type.TypeReference;
 import com.github.dactiv.framework.commons.Casts;
 import com.github.dactiv.framework.commons.RestResult;
 import com.github.dactiv.framework.commons.id.IdEntity;
@@ -7,34 +11,34 @@ import com.github.dactiv.framework.commons.id.StringIdEntity;
 import com.github.dactiv.framework.commons.id.number.NumberIdEntity;
 import com.github.dactiv.framework.commons.page.Page;
 import com.github.dactiv.framework.commons.page.PageRequest;
+import com.github.dactiv.framework.commons.page.TotalPage;
 import com.github.dactiv.framework.security.audit.PluginAuditEvent;
 import com.github.dactiv.framework.security.audit.PluginAuditEventRepository;
 import com.github.dactiv.framework.security.audit.elasticsearch.index.IndexGenerator;
 import com.github.dactiv.framework.security.audit.elasticsearch.index.support.DateIndexGenerator;
 import org.apache.commons.collections4.MapUtils;
 import org.apache.commons.lang3.StringUtils;
-import org.elasticsearch.index.query.BoolQueryBuilder;
-import org.elasticsearch.index.query.QueryBuilder;
-import org.elasticsearch.index.query.QueryBuilders;
-import org.elasticsearch.search.sort.SortBuilders;
-import org.elasticsearch.search.sort.SortOrder;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.boot.actuate.audit.AuditEvent;
+import org.springframework.data.domain.Sort;
+import org.springframework.data.elasticsearch.client.elc.NativeQueryBuilder;
 import org.springframework.data.elasticsearch.core.ElasticsearchOperations;
 import org.springframework.data.elasticsearch.core.IndexOperations;
-import org.springframework.data.elasticsearch.core.SearchHit;
+import org.springframework.data.elasticsearch.core.SearchHits;
 import org.springframework.data.elasticsearch.core.document.Document;
 import org.springframework.data.elasticsearch.core.mapping.IndexCoordinates;
 import org.springframework.data.elasticsearch.core.query.IndexQuery;
 import org.springframework.data.elasticsearch.core.query.IndexQueryBuilder;
-import org.springframework.data.elasticsearch.core.query.NativeSearchQueryBuilder;
 import org.springframework.util.Assert;
 
 import java.io.IOException;
 import java.io.InputStream;
 import java.time.Instant;
-import java.util.*;
+import java.util.LinkedList;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
 import java.util.stream.Collectors;
 
 /**
@@ -43,6 +47,8 @@ import java.util.stream.Collectors;
  * @author maurice.chen
  */
 public class ElasticsearchAuditEventRepository implements PluginAuditEventRepository {
+
+    public static final int DEFAULT_FIND_SIZE = 10000;
 
     public static final String MAPPING_FILE_PATH = "elasticsearch/plugin-audit-mapping.json";
 
@@ -66,7 +72,7 @@ public class ElasticsearchAuditEventRepository implements PluginAuditEventReposi
         this.indexGenerator = new DateIndexGenerator(
                 indexName,
                 Casts.UNDERSCORE,
-                Arrays.asList(RestResult.DEFAULT_TIMESTAMP_NAME, NumberIdEntity.CREATION_TIME_FIELD_NAME)
+                List.of(RestResult.DEFAULT_TIMESTAMP_NAME, NumberIdEntity.CREATION_TIME_FIELD_NAME)
         );
     }
 
@@ -115,7 +121,7 @@ public class ElasticsearchAuditEventRepository implements PluginAuditEventReposi
 
         indexOperations.create();
         try (InputStream input = Thread.currentThread().getContextClassLoader().getResourceAsStream(mappingFilePath)) {
-            Map<String, Object> mapping = Casts.readValue(input, Casts.MAP_TYPE_REFERENCE);
+            Map<String, Object> mapping = Casts.readValue(input, new TypeReference<>() {});
             indexOperations.putMapping(Document.from(mapping));
         }
     }
@@ -127,24 +133,21 @@ public class ElasticsearchAuditEventRepository implements PluginAuditEventReposi
 
         String index = getIndexName(after).toLowerCase();
 
-        QueryBuilder queryBuilder = createQueryBuilder(after, type, principal);
+        NativeQueryBuilder builder = new NativeQueryBuilder()
+                .withPageable(org.springframework.data.domain.PageRequest.ofSize(DEFAULT_FIND_SIZE))
+                .withQuery(q -> createQueryBuilder(q, after, type, principal))
+                .withSort(Sort.by(Sort.Order.desc(RestResult.DEFAULT_TIMESTAMP_NAME)));
 
-        NativeSearchQueryBuilder builder = new NativeSearchQueryBuilder()
-                .withQuery(queryBuilder)
-                .withSorts(SortBuilders.fieldSort(RestResult.DEFAULT_TIMESTAMP_NAME).order(SortOrder.DESC));
+        List<AuditEvent> result = new LinkedList<>();
 
         try {
-
-            return elasticsearchOperations
-                    .search(builder.build(), Map.class, IndexCoordinates.of(index))
-                    .stream()
-                    .map(SearchHit::getContent)
-                    .map(o -> this.createPluginAuditEvent(Casts.cast(o)))
-                    .collect(Collectors.toCollection(LinkedList::new));
+            SearchHits<Map<String, Object>> hits = Casts.cast(elasticsearchOperations.search(builder.build(), Map.class, IndexCoordinates.of(index)));
+            result = hits.stream().map(s -> this.createAuditEvent(s.getContent())).collect(Collectors.toList());
         } catch (Exception e) {
-            LOGGER.warn("查询 elasticsearch 审计事件出现异常", e);
-            return new LinkedList<>();
+            LOGGER.warn("查询索引 [" + index + "] 数据出现错误", e);
         }
+
+        return result;
     }
 
     @Override
@@ -154,26 +157,20 @@ public class ElasticsearchAuditEventRepository implements PluginAuditEventReposi
 
         String index = getIndexName(after).toLowerCase();
 
-        QueryBuilder queryBuilder = createQueryBuilder(after, type, principal);
-
-        NativeSearchQueryBuilder builder = new NativeSearchQueryBuilder()
-                .withQuery(queryBuilder)
-                .withSorts(SortBuilders.fieldSort(RestResult.DEFAULT_TIMESTAMP_NAME).order(SortOrder.DESC))
+        NativeQueryBuilder builder = new NativeQueryBuilder()
+                .withQuery(q -> createQueryBuilder(q, after, type, principal))
+                .withSort(Sort.by(Sort.Order.desc(RestResult.DEFAULT_TIMESTAMP_NAME)))
                 .withPageable(org.springframework.data.domain.PageRequest.of(pageRequest.getNumber() - 1, pageRequest.getSize()));
 
         try {
-            List<PluginAuditEvent> content = elasticsearchOperations
-                    .search(builder.build(), Map.class, IndexCoordinates.of(index))
-                    .stream()
-                    .map(SearchHit::getContent)
-                    .map(o -> this.createPluginAuditEvent(Casts.cast(o)))
-                    .collect(Collectors.toCollection(LinkedList::new));
-
-            return new Page<>(pageRequest, new ArrayList<>(content));
+            SearchHits<Map<String, Object>> hits = Casts.cast(elasticsearchOperations.search(builder.build(), Map.class, IndexCoordinates.of(index)));
+            List<AuditEvent> content = hits.stream().map(s -> this.createAuditEvent(s.getContent())).collect(Collectors.toList());
+            return new TotalPage<>(pageRequest, content, hits.getTotalHits());
         } catch (Exception e) {
-            LOGGER.warn("查询 elasticsearch 审计事件出现异常", e);
-            return new Page<>(pageRequest, new ArrayList<>());
+            LOGGER.warn("查询索引 [" + index + "] 分页数据出现错误", e);
         }
+
+        return new TotalPage<>(pageRequest, new LinkedList<>(), 0);
     }
 
     @Override
@@ -207,22 +204,6 @@ public class ElasticsearchAuditEventRepository implements PluginAuditEventReposi
     }
 
     /**
-     * 创建插件审计事件
-     *
-     * @param map map 数据源
-     *
-     * @return 插件审计事件
-     */
-    public PluginAuditEvent createPluginAuditEvent(Map<String, Object> map) {
-        AuditEvent auditEvent = createAuditEvent(map);
-
-        PluginAuditEvent pluginAuditEvent = new PluginAuditEvent(auditEvent);
-        pluginAuditEvent.setId(map.get(IdEntity.ID_FIELD_NAME).toString());
-
-        return pluginAuditEvent;
-    }
-
-    /**
      * 创建查询条件
      *
      * @param after     在什么时间之后的
@@ -231,22 +212,22 @@ public class ElasticsearchAuditEventRepository implements PluginAuditEventReposi
      *
      * @return 查询条件
      */
-    private QueryBuilder createQueryBuilder(Instant after, String type, String principal) {
-        BoolQueryBuilder queryBuilder = QueryBuilders.boolQuery();
+    private ObjectBuilder<Query> createQueryBuilder(Query.Builder builder, Instant after, String type, String principal) {
+        List<Query> queryList = new LinkedList<>();
 
         if (StringUtils.isNotBlank(type)) {
-            queryBuilder = queryBuilder.must(QueryBuilders.termQuery(PluginAuditEvent.TYPE_FIELD_NAME, type));
+            queryList.add(Query.of(q -> q.term(t -> t.field(PluginAuditEvent.TYPE_FIELD_NAME).value(type))));
         }
 
         if (Objects.nonNull(after)) {
-            queryBuilder = queryBuilder.must(QueryBuilders.rangeQuery(RestResult.DEFAULT_TIMESTAMP_NAME).gte(after.getEpochSecond()));
+            queryList.add(Query.of(q -> q.range(r -> r.field(RestResult.DEFAULT_TIMESTAMP_NAME).gte(JsonData.of(after.getEpochSecond())))));
         }
 
         if (StringUtils.isNotBlank(principal)) {
-            queryBuilder = queryBuilder.must(QueryBuilders.termQuery(PluginAuditEvent.PRINCIPAL_FIELD_NAME, principal));
+            queryList.add(Query.of(q -> q.term(t -> t.field(PluginAuditEvent.PRINCIPAL_FIELD_NAME).value(principal))));
         }
 
-        return queryBuilder;
+        return builder.bool(t -> t.must(queryList));
     }
 
     public ElasticsearchOperations getElasticsearchOperations() {
